[tool.poetry]
name = "luna-new"
version = "0.1.0"
description = ""
authors = ["apardeepsingh13 <apardeep.singh@edenedge.in>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
langgraph = "^0.2.56"
langchain = "^0.3.9"
langchain-google-genai = "^2.0.6"
jsonpatch = "^1.33"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
